# Voxium

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.py
docker/: Dockerfile
extension/: README.md  content.js  manifest.json  offscreen.html  offscreen.js  service-worker.js
src/voxium/api/: app.py  deps.py
src/voxium/api/routes/: __init__.py  health.py  meetings.py
src/voxium/api/templates/: meeting.html
src/voxium/config/: context.py  settings.py
src/voxium/core/: exceptions.py
src/voxium/core/interfaces/: __init__.py  llm.py  transcription.py
src/voxium/core/models/: __init__.py  extraction.py  output.py  pipeline.py  transcript.py
src/voxium/intelligence/: graph.py  routing.py  state.py
src/voxium/intelligence/nodes/: extractor.py  segmentation.py
src/voxium/intelligence/prompts/: loader.py
src/voxium/intelligence/prompts/templates/: extraction_combined.j2  segmentation.j2
src/voxium/intelligence/strategies/: __init__.py  base.py  dynamic_batch.py  per_segment_combined.py  selector.py  single_batch.py
src/voxium/llm/: openai_compatible.py  router.py
src/voxium/transcription/: whisperx.py
