[project]
name = "voxium"
version = "0.1.0"
description = "Multi-agent meeting intelligence system"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.22",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "torch>=2.8.0,<2.9",
    "torchaudio>=2.8.0,<2.9",
    "whisperx>=3.8.1",
    "openai>=2.25.0",
    "langgraph>=1.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxium"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
